--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "mocha": "^2.1.0",
     "mongoose": "~3.6.13",
     "monguscate": "~0.1.0"
+  },
+  "directories": {
+    "test": "test"
   }
 }
